--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@ title: Home
 
 
 <p class="message">
-  Hi! I'm Diogo and I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at City, University of London. 
+  Hi! I'm Diogo and I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at  <a href="https://www.city.ac.uk/about/people/academics/diogo-pires" target="_blank">City, University of Londonm</a>. 
   
-  My interests are focused on the development of modelling tools for the evolution of behaviour, particularly in the context of evolutionary game theory, incorporating features of real complex systems. I am interested in understanding and informing aspects of social and biological systems related to collective action, population structure and mobility. I am doing my PhD under the supervision of Professor Mark Broom, and as part of EvoGamesPlus, a broad european consortium focused on the theory and applications of evolutionary game theory.
+  
+  My interests are focused on the development of modelling tools for the evolution of behaviour, particularly in the context of evolutionary game theory, incorporating features of real complex systems. I am interested in understanding and informing aspects of social and biological systems related to collective action, population structure and mobility. I am doing my PhD under the supervision of <a href="http://www.staff.city.ac.uk/mark.broom/index.html#" target="_blank">Professor Mark Broom</a>, and as part of <a href="https://evogamesplus.eu" target="_blank">EvoGamesPlus</a>, a broad european consortium focused on the theory and applications of evolutionary game theory.
 </p>
 
-Have questions or suggestions? Feel free to [contact me via email](Diogo.L.Pires@city.ac.uk) or [ask me on Twitter](https://twitter.com/pires_dl).
+Have questions or suggestions? Feel free to contact me via email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">ask me on Twitter</a>.
 
 Thanks for reading!
