--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ title: Home
   Hi, I'm Diogo! I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at  <a href="https://www.city.ac.uk/about/people/academics/diogo-pires" target="_blank">City, University of London</a>. 
   </p>
 
-I'm interested in developping modelling tools for the study of behaviour emmergence in the context of evolutionary game theory, often incorporating features of real complex systems. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. I'm currently doing my PhD under the supervision of <a href="http://www.staff.city.ac.uk/mark.broom/index.html#" target="_blank">Professor Mark Broom</a> as part of <a href="https://evogamesplus.eu" target="_blank">EvoGamesPlus</a> - a broad european consortium focused on the theory and applications of evolutionary game theory.
+<p>I'm interested in developing modelling tools for studying behaviour emergence in the context of evolutionary game theory, often incorporating realistic features of complex systems. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. I'm currently doing my PhD under the supervision of <a href="http://www.staff.city.ac.uk/mark.broom/index.html#" target="_blank">Professor Mark Broom</a> as part of <a href="https://evogamesplus.eu" target="_blank">EvoGamesPlus</a>, an European consortium focused on the theory and applications of evolutionary game theory.
+  </p>
 
+<p>Have questions or suggestions? Feel free to contact me via email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">ask me on Twitter</a>.
+  </p>
 
-Have questions or suggestions? Feel free to contact me via email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">ask me on Twitter</a>.
-
-
-Thanks for reading!
+<p>Thanks for reading!
+  </p>
