--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@ title: Home
   Hi, I'm Diogo! I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at  <a href="https://www.city.ac.uk/about/people/academics/diogo-pires" target="_blank">City, University of London</a>. 
   </p>
 
-<p>I'm interested in developing modelling tools for studying behaviour emergence in the context of evolutionary game theory, often incorporating realistic features of complex systems. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. 
+<p class="message">Feel free to drop me an email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>.
   </p>
 
-<p>Feel free to drop me an email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>.
-  </p>
-
-<p>Thanks!
+<p class="message">Thanks!
   </p>
