--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@ title: Home
 ---
 
 
-<p class="message">
-  Hi, I'm Diogo! I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at  <a href="https://www.city.ac.uk/about/people/academics/diogo-pires" target="_blank">City, University of London</a>. 
-  </p>
+<p> Hi, I'm Diogo! I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at  <a href="https://www.city.ac.uk/about/people/academics/diogo-pires" target="_blank">City, University of London</a>. 
+<p/>
 
-<p class="message">Feel free to drop me an email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>.
-  </p>
-
-<p class="message">Thanks!
+<p class="message">Feel free to drop me an email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>. Thanks!
   </p>
