--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ title: Home
 <p>I'm interested in developing modelling tools for studying behaviour emergence, particularly in the context of evolutionary game theory and often incorporating realistic features of complex systems. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. 
   </p>
 
-<p class="message">Feel free to drop me an email (Diogo.L.Pires@city.ac.uk) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>. Thanks!
+<p class="message">Feel free to drop me an email (diogo.l.pires@gmail.com) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>. Thanks!
   </p>
