--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ title: Home
 ---
 
 
-<p>Hi, I'm Diogo! I'm a PhD candidate and Marie Curie Research Fellow in the Department of Mathematics at  <a href="https://www.city.ac.uk/about/people/academics/diogo-pires" target="_blank">City, University of London</a>. 
+<p>Hi, I'm Diogo! I'm a postdoctoral researcher
+  at the <a href="https://sodas.ku.dk/people/" target="_blank">Copenhagen Center for Social Data Science (SODAS)</a>. 
 </p>
 
-<p>I'm interested in developing modelling tools for studying behaviour emergence, particularly in the context of evolutionary game theory and often incorporating realistic features of complex systems. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. 
+<p>I'm interested in developing new methodologies for better comparing social interaction networks, applying them both to human and non-human animals. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. 
   </p>
 
-<p class="message">Feel free to drop me an email (diogo.l.pires@gmail.com) or <a href="https://twitter.com/pires_dl" target="_blank">send me a message on Twitter</a>. Thanks!
+<p class="message">Feel free to drop me an email (diogolpires@sodas.ku.dk) or <a href="https://bsky.app/profile/diogolpires.bsky.social" target="_blank">send me a message on Bluesky</a>. Thanks!
   </p>
