--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
   at the <a href="https://sodas.ku.dk/people/" target="_blank">Copenhagen Center for Social Data Science (SODAS)</a>. 
 </p>
 
-<p>I'm interested in developing new methodologies for better comparing social interaction networks, applying them both to human and non-human animals. My focus is on understanding and informing aspects of social and biological systems related to collective action, population structure, and mobility. 
+<p>I'm interested in developing new methodologies for better comparing social interaction networks, applying them both to human and non-human animals. My focus is on understanding and informing aspects of social and biological systems related to social behaviour, structure of social interactions, and mobility. 
   </p>
 
 <p class="message">Feel free to drop me an email (diogolpires@sodas.ku.dk) or <a href="https://bsky.app/profile/diogolpires.bsky.social" target="_blank">send me a message on Bluesky</a>. Thanks!
