--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@ title: Home
   at the <a href="https://sodas.ku.dk/people/" target="_blank">Copenhagen Center for Social Data Science (SODAS)</a>. 
 </p>
 
-<p>My research focuses on understanding and informing aspects of social and biological systems related to social behaviour, structure of social interactions, and mobility. I'm now developing new methodologies for comparing social interaction network data with theoretical models, applying them both to human and non-human animals. 
+<p>My research focuses on understanding and informing aspects of social and biological systems related to social behaviour, structure of social interactions, and mobility. I'm now developing new methodologies for comparing social interaction network data with theoretical models, applying them to both human and macaque social networks. 
   </p>
+
+<img src="path/to/image.jpg" alt="Description of image" width="300" height="200">
 
 <p class="message">Feel free to drop me an email (diogolpires@sodas.ku.dk) or <a href="https://bsky.app/profile/diogolpires.bsky.social" target="_blank">send me a message on Bluesky</a>. Thanks!
   </p>
