--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
 <p>My research focuses on understanding and informing aspects of social and biological systems related to social behaviour, structure of social interactions, and mobility. I'm now developing new methodologies for comparing social interaction network data with theoretical models, applying them to both human and macaque social networks. 
   </p>
 
-<img src="path/to/image.jpg" alt="Description of image" width="300" height="200">
+<img src="networks.png" alt="" width="700">
 
 <p class="message">Feel free to drop me an email (diogolpires@sodas.ku.dk) or <a href="https://bsky.app/profile/diogolpires.bsky.social" target="_blank">send me a message on Bluesky</a>. Thanks!
   </p>
